<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout"
        tools:context=".MainActivity"
        android:focusable="true"
        android:focusableInTouchMode="true"
>

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/mainUIRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


        <ImageView android:layout_width="80dp" android:layout_height="80dp"
                   android:layout_centerHorizontal="true"
                   android:layout_marginTop="20dp"
                   android:layout_below="@id/main_toolBar"
                   android:id="@+id/logoImageView"
                   android:src="@drawable/data_logo_teal"
        />



        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/welcome_message"
                  android:layout_below="@id/logoImageView"
                  android:id="@+id/welcomeMessageTextView"
                  android:textSize="18sp"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="20dp"
                  android:layout_marginStart="4dp"
                  android:layout_marginEnd="4dp"
                  android:textAlignment="center"
                  android:fontFamily="@font/abel"

                  android:textStyle="bold"/>

        <android.support.v7.widget.CardView
                android:id="@+id/userDetailsCard"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="2dp"
                android:layout_below="@+id/welcomeMessageTextView"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                android:layout_centerHorizontal="true"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/user_info"
                        android:fontFamily="@font/audiowide"
                        android:textSize="18sp"
                        android:layout_gravity="center"

                        android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/name_TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"



                >


                    <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/name_TextField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Name"
                            android:fontFamily="@font/abel"
                            android:textStyle="bold"
                            android:inputType="text"
                    />


                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"

                >


                    <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/email_TextField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:fontFamily="@font/abel"
                            android:textStyle="bold"
                            android:inputType="text" />


                </android.support.design.widget.TextInputLayout>













            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/submit"
                android:layout_below="@id/userDetailsCard"
                android:fontFamily="@font/audiowide"
                android:textColor="#FAFAFA"
                android:id="@+id/submitButton"
                android:layout_margin="10dp"
        />



    </RelativeLayout>

    <com.leonkianoapps.leonk.app2.TimeElement android:layout_width="80dp"
                                              android:layout_height="80dp"
                                              android:id="@+id/timeElementView"
                                              android:text="@string/app_name"
                                              android:textSize="14sp"
                                              android:textAlignment="center"
                                              android:layout_gravity="end"
                                              android:layout_marginTop="80dp"
                                              android:gravity="center"
                                              android:layout_marginBottom="40dp"
                                              app:layout_dodgeInsetEdges="bottom"
                                              android:layout_marginEnd="16dp"
                                              android:background="@drawable/gradient_background"
                                              android:textColor="#FAFAFA"



    />

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_dodgeInsetEdges="bottom"
            android:background="@color/colorPrimary"
            android:text="@string/viewUsers"
            android:fontFamily="@font/audiowide"
            android:textColor="#FAFAFA"
            android:id="@+id/viewUsersButton"
            android:layout_margin="10dp"
    />

</android.support.design.widget.CoordinatorLayout>